<resources>
    <string name="app_name">Hands_on</string>
    <string name="tab_menu_find">"发现"</string>
    <string name="tab_menu_campus">"校园直通车"</string>
    <string name="tab_menu_message">"消息"</string>
    <string name="tab_menu_my">"我的"</string>
    <string name="jichu">"模拟上手派学生端"</string>
    <string name="category">"移动   前端"</string>
    <string name="number">"1~2人 | 14天"</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
