<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.xsy.hands_on.MainActivity">
    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/textView_title"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="寻找项目"
            android:gravity="center"
            android:background="@color/yellow"
            android:textColor="@color/black"
            android:textSize="18dp"/>
        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/mes"
            android:background="@android:color/transparent"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20px"
            />
    </RelativeLayout>
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_layout"
        android:layout_above="@+id/tab_menu"
        />
    <RadioGroup
        android:id="@+id/tab_menu"
        android:layout_alignParentBottom="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/transparent">
        <RadioButton
            android:id="@+id/tab_menu_find"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_find"
            android:text="@string/tab_menu_find"/>
        <RadioButton
            android:id="@+id/tab_menu_campus"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_campus"
            android:text="@string/tab_menu_campus"/>
        <RadioButton
            android:id="@+id/tab_menu_message"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_message"
            android:text="@string/tab_menu_message"/>
        <RadioButton
            android:id="@+id/tab_menu_my"
            style="@style/tab_menu_item"
            android:drawableTop="@drawable/tab_menu_my"
            android:text="@string/tab_menu_my"/>
    </RadioGroup>


</RelativeLayout>
