<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/jichu"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="10px"
        android:paddingRight="10px">

        <com.example.xsy.hands_on.RoundCornerImageView
            android:id="@+id/ima_jichu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:adjustViewBounds="true"
            android:scaleType="fitXY"
            android:src="@mipmap/bg_jichu" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/relative_pro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <TextView
            android:id="@+id/textView_moni"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="66px"
            android:gravity="center"
            android:text="@string/jichu"
            android:textColor="@color/fontColor"
            android:textSize="32px" />

        <ImageView
            android:id="@+id/imageView_jichu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/textView_moni"
            android:layout_marginLeft="15px"
            android:layout_marginStart="15px"
            android:layout_toEndOf="@+id/textView_moni"
            android:layout_toRightOf="@+id/textView_moni"
            android:src="@mipmap/jichu_03" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView_category"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/relative_pro"
        android:layout_marginTop="36px"
        android:gravity="center"
        android:text="@string/category"
        android:textColor="@color/fontColor"
        android:textSize="28px" />

    <TextView
        android:id="@+id/textView_num"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_category"
        android:layout_marginTop="24px"
        android:gravity="center"
        android:text="@string/number"
        android:textColor="@color/fontColor"
        android:textSize="28px" />

    <RelativeLayout
        android:id="@+id/head"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/jichu"
        android:layout_marginTop="-20px">

        <ImageView
            android:id="@+id/imageView_head"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="22px"
            android:layout_marginStart="22px"
            android:src="@drawable/head" />
    </RelativeLayout>

    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/jichu"
        android:layout_marginLeft="22px"
        android:layout_marginTop="10px"
        android:layout_toRightOf="@+id/head"
        android:text="赵云龙"
        android:textColor="#414141"
        android:textSize="30px" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/name"
        android:layout_below="@id/jichu"
        android:layout_toRightOf="@+id/name"
        android:gravity="center_vertical"
        android:paddingLeft="15px"
        android:text="· 导师"
        android:textColor="#989898"
        android:textSize="24px" />

    <TextView
        android:id="@+id/company"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/name"
        android:layout_below="@+id/name"
        android:layout_marginTop="17px"
        android:text="大连希然科技有限公司·开发"
        android:textColor="#989898"
        android:textSize="20px" />

    <ImageView
        android:id="@+id/line_down"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/head"
        android:layout_marginLeft="30px"
        android:layout_marginRight="30px"
        android:layout_marginTop="30px"
        android:background="#f1f1f1" />

    <TextView
        android:id="@+id/key"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/line_down"
        android:layout_below="@+id/line_down"
        android:layout_marginTop="15px"
        android:background="@drawable/label_style"
        android:paddingBottom="5px"
        android:paddingLeft="13px"
        android:paddingRight="13px"
        android:paddingTop="5px"
        android:text="Android"
        android:textColor="#414141"
        android:textSize="24px" />

    <ImageView
        android:id="@+id/bottom"
        android:layout_width="match_parent"
        android:layout_height="20px"
        android:layout_below="@+id/key"
        android:layout_marginTop="15px"
        android:background="#f1f1f1" />


</RelativeLayout>